[project]
name = "liv-analyser-vk"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "VadanKhan", email = "vadankhan1@gmail.com"},
]
dependencies = ["pandas>=2.3.1", "numpy>=2.3.2", "scipy>=1.16.1", "scikit-learn>=1.7.1", "tqdm>=4.67.1", "watchdog>=6.0.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
